<resources>
    <string name="app_name">Kidsnesia</string>
    <string name="title_welcome_page">Selamat Datang Di</string>
    <string name="greetingWelcome">Selamat Datang \ndi</string>
    <string name="regist">Daftar</string>
    <string name="login">Login</string>
    <string name="mari_belajar_sambil_bermain">Belajar Sambil Bermain</string>
    <string name="greeting">Selamat Datang di Kidsnesia!</string>
    <string name="userName">Masukkan Nama Lengkap</string>
    <string name="email">Email\n</string>
    <string name="password">Kata Sandi</string>
    <string name="no_hp">No Hp</string>
    <string name="singup_login_hint">Sudah Punya Akun? Masuk</string>
    <string name="nav_home">Dashborad</string>
    <string name="nav_video">Video</string>
    <string name="nav_event">Event</string>
    <string name="nav_profile">Profile</string>
    <string name="selamat_datang_di_kidsnesia">Selamat Datang di\nKidsnesia!</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun">Sudah punya akun? Masuk</string>
    <string name="selamat_datang_kembali">Selamat Datang Kembali!</string>
    <string name="belum_punya_akun_daftar">Belum punya akun? Daftar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="hal_dashboard">Halo,</string>
    <string name="about_kidsnesia">Tentang Kidsnesia</string>
    <string name="followed_event">Event yang di ikuti</string>

    <string name="kidsnesia_description">Kidsnesia adalah pusat wisata edukasi interaktif untuk anak-anak dengan menghadirkan program unggulan yang menggabungkan pendidikan digital, eksplorasi, budaya Indonesia, serta pengembangan kreativitas dan keterampilan melalui belajar sambil bermain</string>
    <string name="nama_event">Nama Event</string>
    <string name="harga">Harga:</string>
    <string name="kategori">Kategori:</string>
    <string name="kuota">Kuota:</string>
    <string name="tentang_event">Tentang Event</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="member_premium">Member Premium</string>

    <string name="desc_program"><![CDATA[
    <font color="#FF79AB"><b>Kidsnesia</b></font> adalah pusat wisata edukasi interaktif untuk anak-anak dengan menghadirkan
    <font color="#FF79AB"><b>Program Unggulan</b></font> yang menggabungkan
    <font color="#FF79AB"><b>Pendidikan digital, eksplorasi budaya Indonesia</b></font>.
]]></string>


    <string name="lanjutkan">Lanjutkan</string>
    <string name="keluar">Keluar</string>

    <string name="pilih_metode_pembayaran">Pilih Metode Pembayaran</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="tagihan_bayar">Silahkan melakukan pembayaran dengan total :</string>

    <string name="empty_email">Email cannot be empty</string>
    <string name="invalid_email">Invalid email format</string>

    <string name="empy_pass">Password tidak boleh kosong</string>
    <string name="no_spacy_pass">Password tidak boleh mengandung spasi</string>

    <string name="total_bayar">Total Bayar</string>

    <string-array name="metode_pembayaran_array">
        <item>Pilih Metode Pembayaran</item> <!-- Tambahkan item ini -->
        <item>Dana</item>
        <item>Gopay</item>
        <item>Ovo</item>
        <item>BSI</item>
        <item>Mandiri</item>
        <item>BNI</item>
    </string-array>

    <string name="text_otp">Masukkan OTP yang sudah kami kirimkan ke email anda </string>
    <string name="didnt_receive_otp">Tidak mendapatkan OTP? Kirim ulang OTP</string>
    <string name="done_otp">DONE</string>
    <string name="detail_produk">Detail Produk</string>
    <string name="pesan_sekarang">Pesan Sekarang</string>
    <string name="status">Status</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="jumlah">Jumlah</string>
    <string name="detail_keranjang">Detail Keranjang</string>
    <string name="jadwal_event">Jadwal Event</string>
    <string name="lanjutkan_pemesanan">Lanjutkan Pemesanan</string>
    <string name="waktu_kegiatan">Waktu Kegiatan :</string>
    <string name="harga_tiket">Harga :</string>
    <string name="total_tiket">Jumlah Tiket :</string>
    <string name="total_harga">Total Harga :</string>
    <string name="lanjutkan_pembayaran">Lanjutkan Pembayaran</string>
    <string name="informasi_transaksi_bank">Silakan lakukan pembayaran dengan cara melakukan transfer ke rekening berikut. Kemudian pilih nama bank tempat anda akan melakukan transfer dan kirim buktinya dalam bentuk foto/screenshot layar.</string>
    <string name="no_rek_tujuan">Nomor Rekening Tujuan : </string>
    <string name="nomor_rek_kidsnesia">7123456789</string>
    <string name="atas_nama">Atas Nama :</string>
    <string name="pemilik_rek">PT KIDSNESIA EDUPARK KREASI</string>
    <string name="nama_bank">Nama Bank</string>
    <string name="pilih_bank">Pilih Nama Bank</string>
    <string name="upload_transfer">Upload Bukti Transfer</string>
    <string name="daftar_membership">Daftar Sekarang</string>
    <string name="ajakan_membership">Sepertinya kamu belum ikut membership nih?\nAyo daftar Membership untuk bisa mengakses fitur ini</string>
    <string name="promosi_membership">Yuk, jadi bagian dari keluarga Kidsnesia! ✨\n\nDengan hanya membayar Rp 50000, kamu bisa menikmati semua video menarik selama 1 bulan penuh! Jangan sampai ketinggalan konten eksklusif kami!</string>
    <string name="ayo_bergabung">Ayo Bergabung</string>
    <string name="informasi_kirim_bukti_tf">Silahkan kirimkan bukti transfer dengan menekan tombol di bawah ini. Pastikan foto/screenshot bukti transfer memiliki format .jpg/.jpeg/.png</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="masukkan_email_sebelumnya">Silahkan masukkan email \nyang pernah anda \nregistrasikan sebelumnya</string>
    <string name="masukkan_password_baru">Silahkan masukkan kata sandi \nbaru anda</string>
    <string name="minimum_pass">Password minimal 12 karakter</string>
    <string name="harus_ada_huruf_kapital">Harus ada huruf kapital</string>
    <string name="harus_ada_angka">Harus ada angka</string>
    <string name="harus_ada_karakter_spesial">Harus ada karakter spesial</string>
    <string name="nota_pembelian">Nota Pembelian</string>

</resources>