<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imgEvent"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_maskot_kidsnesia" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="16dp">

            <TextView
                android:id="@+id/tvEventName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_event"
                android:textSize="16sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/tvEventPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/harga"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvEventKuota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kuota"
                android:textSize="14sp"
                android:textColor="@color/sky_blue"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
