<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:background="@drawable/bg_welcome_gradient"
    tools:context=".ui.welcome.WelcomeActivity">

    <!-- Logo utama -->
    <ImageView
        android:id="@+id/imageIcon"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:contentDescription="Kidsnesia Logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/logo_kidsnesia" />

    <!-- Slogan atau CTA awal -->
    <TextView
        android:id="@+id/textSlogan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mari_belajar_sambil_bermain"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/imageIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Ilustrasi tengah -->
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="20dp"
        android:contentDescription="Ilustrasi Anak Belajar"
        app:layout_constraintTop_toBottomOf="@id/textSlogan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_logo_kidsnesia" />

    <!-- Deskripsi program -->
    <TextView
        android:id="@+id/textDescProgram"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:textColorLink="@color/black"
        android:text="@string/desc_program"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <!-- Tombol Lanjut -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLanjut"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/lanjutkan"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_bold"
        app:cornerRadius="100dp"
        app:iconPadding="8dp"
        app:iconGravity="textStart"
        app:backgroundTint="@color/primary_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
