<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_blue"
    tools:context=".purchase.presentation.transaksi.membership.TransaksiMembershipActivity">

    <!-- Toolbar dengan ikon kembali dan judul -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background  ="@color/sky_blue"
        android:elevation="4dp"
        app:title="@string/lanjutkan_pembayaran"
        app:titleCentered="true"
        app:titleTextColor="@android:color/white"
        app:popupTheme="@style/ThemeOverlay.Material3.Light"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frame_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="452dp"
        android:background="@color/white"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.351">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="Logo BSI"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_bsi" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="Logo Dana"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_dana" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="Logo BNI"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_bni" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="Logo OVO"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_ovo" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="Logo GoPay"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_gopay" />
        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/informasi_transaksi_bank"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textNoRekTujuan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_bank"
        app:layout_constraintVertical_bias="0.218" />

    <TextView
        android:id="@+id/textNoRekTujuan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="116dp"
        android:text="@string/nama_bank"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_bank" />

    <AutoCompleteTextView
        android:id="@+id/textNamaBank"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/grey_bg"
        android:hint="@string/pilih_bank"
        android:padding="8dp"
        android:textColorHint="#8e8e8e"
        android:textSize="16sp"
        android:inputType="none"
        android:focusable="false"
        android:drawableEnd="@drawable/ic_arrow_drop_down_24"
        android:drawableRight="@drawable/ic_arrow_drop_down_24"
        android:drawablePadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNoRekTujuan" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonKonfirmasi"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/pink_button_bg"
        android:gravity="center"
        android:text="@string/lanjutkan"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>