<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_blue"
    tools:context=".auth.presentasi.profile.ProfileFragment">

    <ProgressBar
        android:id="@+id/progressBarProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/logo_kidsnesia"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:elevation="20dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/placeholder_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeWidth="2dp"
        app:strokeColor="@color/black"
        app:shapeAppearanceOverlay="@style/CircleImageView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/bottom_background_light"
        app:layout_constraintTop_toBottomOf="@id/logo_kidsnesia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Member Premium -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/memberContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/imageMember"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_member"
                app:layout_constraintEnd_toStartOf="@+id/textMember"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/textMember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_premium"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageMember"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Informasi Profil -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/infoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/memberContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/textEmailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email:"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textEmailProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textEmailLabel"
                app:layout_constraintTop_toTopOf="@+id/textEmailLabel" />

            <TextView
                android:id="@+id/textNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nama:"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textEmailLabel"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/textNameProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textNameLabel"
                app:layout_constraintTop_toTopOf="@+id/textNameLabel" />

            <TextView
                android:id="@+id/textPhoneLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No HP:"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textNameLabel"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/textPhoneProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textPhoneLabel"
                app:layout_constraintTop_toTopOf="@+id/textPhoneLabel" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Tombol -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAbout"
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/pink_button_bg"
            android:gravity="center"
            android:text="@string/about_kidsnesia"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoContainer" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonFollowedEvent"
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/pink_button_bg"
            android:gravity="center"
            android:text="@string/nota_pembelian"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonAbout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonExit"
            android:layout_width="310dp"
            android:layout_height="45dp"
            android:background="@drawable/pink_button_bg"
            android:text="@string/keluar"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonFollowedEvent"
            app:layout_constraintVertical_bias="0.068" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
